app_config/structure/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dde-agent-structure-svc
  name: dde-agent-structure
  namespace: geogpt-dev
spec:
  ports:
  - name: service-port
    port: 9492
    protocol: TCP
    targetPort: 9492
  selector:
    app: dde-agent-structure
  sessionAffinity: None
